--- a/backend/package.json
+++ b/backend/package.json
@@ -5,7 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "nodemon",
-    "build": "tsc",
+    "build": "pnpm run lint && tsc",
     "start": "node dist/index.js",
     "test": "vitest run",
     "test:watch": "vitest",
@@ -22,6 +22,7 @@
     "@langchain/groq": "^0.2.0",
     "@langchain/openai": "^0.3.0",
     "@supabase/supabase-js": "^2.47.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.3.1",
     "e2b": "^2.12.1",
@@ -29,18 +30,19 @@
     "uuid": "^11.0.0"
   },
   "devDependencies": {
-    "nodemon": "^3.1.9",
     "@eslint/js": "^9.15.0",
+    "@types/cookie-parser": "^1.4.10",
     "@types/cors": "^2.8.17",
     "@types/express": "^5.0.0",
     "@types/node": "^22.10.0",
     "@types/uuid": "^10.0.0",
     "eslint": "^9.15.0",
+    "nodemon": "^3.1.9",
+    "supabase": "^2.15.0",
     "tsx": "^4.19.2",
     "typescript": "^5.7.2",
     "typescript-eslint": "^8.15.0",
-    "vitest": "^2.1.6",
-    "supabase": "^2.15.0"
+    "vitest": "^2.1.6"
   },
   "engines": {
     "node": ">=18"
